# Homeworks_-Vitaliy_Gubin-

./: README.md  pyproject.toml
htmlcov/: index.html
src/: generators.py  masks.py  processing.py  widget.py  wiget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
