[tool.poetry]
name = "homework-9"
version = "0.1.0"
description = ""
authors = ["Vitaliy_Gubin <trofim-83@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
poetry-core = "^2.2.1"
flake8 = ">=7.3.0"
black = ">=25.9.0"
isort = ">=7.0.0"
mypy = ">=1.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
    \.git
    )/
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'
mypy_path = "src"